--- a/Exhibition.Portal.Api/wwwroot/src/index.html
+++ b/Exhibition.Portal.Api/wwwroot/src/index.html
@@ -10,8 +10,13 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet"/>
   <link href="assets/css/sb-admin-2.min.css" rel="stylesheet"/>
 </head>
-<body d="page-top">
+<body id="page-top">
   <app-root id="wrapper"></app-root>
+ <!-- Scroll to Top Button-->
+ <a class="scroll-to-top rounded" href="#page-top">
+  <i class="fas fa-angle-up"></i>
+</a>
+
     <!-- Bootstrap core JavaScript-->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
